Publicación de pedidos (incompleto) | gitignore
* Falta la relación con las localidades en el alta de pedidos (actualmente hecho por código).
* Se añade el archivo .gitignore al proyecto.

--- a/TeLoBusco/TeLoBusco/Views/Pedidos/Index.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/Index.cshtml
@@ -21,7 +21,7 @@
             <div class="card-body">
                 <h5 class="subtituloPagina">¡Necesito un delivery!</h5>
                 <p class="card-text">¿Compraste comida pero no tenés como buscarla?  No te preocupes, ahora mismo podrás encontrar tu delivery.</p>
-                <a href="#" class="btn btn-outline-secondary btn-lg fontBtn">Publicar pedido</a>
+                <a href="/Pedidos/Create" class="btn btn-outline-secondary btn-lg fontBtn">Publicar pedido</a>
             </div>
         </div>
     </div>
