--- a/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/Pedidos/Index">Pedidos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Pedidos/PedidosCliente">Mis Pedidos</a>
+                        </li>
                     </ul>
                 }            
                 @Html.Partial("_LoginPartial")
