--- a/TeLoBusco/TeLoBusco/Views/Pedidos/Create.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/Create.cshtml
@@ -16,50 +16,53 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.nroDirOrigen, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.nroDirOrigen, new { @class = "col-md-4 control-label" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.nroDirOrigen, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.nroDirOrigen, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.calleOrigen, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.calleOrigen, new { @class = "col-md-4 control-label" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.calleOrigen, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.calleOrigen, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @*@Html.LabelFor(m => m.idLocalidadDestino, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">*@
-                        @*@Html.TextBoxFor(m => m.nroDirOrigen, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.nroDirOrigen, "", new { @class = "text-danger" })*@
-                    @*</div>*@
+                    @Html.LabelFor(m => m.idLocalidadOrigen, new { @class = "col-md-4 control-label" })
+                    <div class="col-md-10">
+                        @Html.DropDownListFor(m => m.idLocalidadOrigen, ViewBag.Localidades as SelectList, "Seleccione una localidad",  new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.idLocalidadOrigen, "", new { @class = "text-danger" })
+                    </div>
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(m => m.nroDirDestino, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.nroDirDestino, new { @class = "col-md-4 control-label" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.nroDirDestino, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.nroDirDestino, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.calleDestino, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.calleDestino, new { @class = "col-md-4 control-label" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.calleDestino, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.calleDestino, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @*@Html.LabelFor(m => m.idLocalidadDestino, new { @class = "col-md-2 control-label" })*@
-                    @*<div class="col-md-10">*@
-                        @*@Html.TextBoxFor(m => m.nroDirDestino, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.nroDirDestino, "", new { @class = "text-danger" })*@
-                    @*</div>*@
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.idLocalidadDestino, new { @class = "col-md-4 control-label" })
+                        <div class="col-md-10">
+                            @Html.DropDownListFor(m => m.idLocalidadDestino, ViewBag.Localidades as SelectList, "Seleccione una localidad", new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.idLocalidadDestino, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.precioPedido, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.precioPedido, new { @class = "col-md-4 control-label" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.precioPedido, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.precioPedido, "", new { @class = "text-danger" })
