--- a/TeLoBusco/TeLoBusco/Views/Pedidos/Index.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Pedidos";
 }
 
@@ -12,7 +11,7 @@
             <div class="card-body">
                 <h5 class="subtituloPagina">¡Quiero ser delivery!</h5>
                 <p class="card-text">¿Sos delivery? ¿Necesitás un ingreso extra? Cualquiera sea el motivo, postúlate como delivery ya mismo.</p>
-                <a href="#" class="btn btn-outline-secondary btn-lg fontBtn">Ver pedidos cercanos</a>
+                <a href="/Pedidos/Pedidos" class="btn btn-outline-secondary btn-lg fontBtn">Ver pedidos cercanos</a>
             </div>
         </div>
     </div>
@@ -27,3 +26,14 @@
     </div>
 </div>
 
+@section scripts{
+    @Scripts.Render("~/bundles/jqueryval")
+    @if (ViewBag.Message != null)
+    {
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $.notify("@ViewBag.Message");
+            });
+        </script>    
+    }
+}
