--- a/TeLoBusco/TeLoBusco/Views/Pedidos/PedidosCliente.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/PedidosCliente.cshtml
@@ -7,7 +7,7 @@
 
 <h2>@ViewBag.Title</h2>
 <hr />
-<div class="grillaPedidos">
+<div class="grillaPedidosCliente">
     @Html.Partial("_PedidosClienteGrilla", Model)
 </div>
 
