--- a/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
@@ -29,15 +29,25 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="/Home/Index">Inicio <span class="sr-only">(current)</span></a>
-                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Pedidos/Index">Pedidos</a>
+                            <a class="nav-link" href="/Home/Index">Inicio</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Pedidos/PedidosCliente">Mis Pedidos</a>
+                        <li class="nav-item dropdown active">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Pedidos<span class="sr-only">(current)</span></a>
+                            <div class="dropdown-menu bg-black">
+                                <a class="dropdown-item itemsPrincipal" href="/Pedidos/Index">Inicio</a>
+                                <a class="dropdown-item itemsPrincipal" href="/Pedidos/Create">Nuevo pedido</a>
+                                <a class="dropdown-item itemsPrincipal" href="/Pedidos/PedidosCliente">Mis pedidos</a>
+                                <div class="dropdown-divider bg-dark"></div>
+                                <a class="dropdown-item itemsPrincipal" href="/Pedidos/Pedidos">Encontrar pedidos cercanos</a>
+                            </div>
                         </li>
+                        @if (User.IsInRole("Administrador"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Usuarios/Index">Administrar usuarios</a>
+                            </li>
+                        }
                     </ul>
                 }            
                 @Html.Partial("_LoginPartial")
