--- a/TeLoBusco/TeLoBusco/Views/Manage/Index.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Manage/Index.cshtml
@@ -23,11 +23,11 @@
             }
             ]
         </dd>
-        <dt>Inicios de sesión externos:</dt>
+        @*<dt>Inicios de sesión externos:</dt>
         <dd>
             @Model.Logins.Count [
             @Html.ActionLink("Administrar", "ManageLogins") ]
-        </dd>
+        </dd>*@
         @*
             Los números de teléfono se pueden usar como un segundo factor de comprobación en un sistema de autenticación en dos fases.
              
@@ -56,12 +56,12 @@
                 }
             </dd>
         *@
-        <dt>Autenticación de dos factores:</dt>
+        @*<dt>Autenticación de dos factores:</dt>
         <dd>
             <p>
                 No hay ningún proveedor de autenticación en dos fases configurado. Consulte <a href="http://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
                 para obtener más información acerca de la configuración de esta aplicación ASP.NET para admitir la autenticación en dos fases.
-            </p>
+            </p>*@
             @*@if (Model.TwoFactor)
                 {
                     using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -82,6 +82,6 @@
                         </text>
                     }
                 }*@
-        </dd>
+        @*</dd>*@
     </dl>
 </div>
