--- a/TeLoBusco/TeLoBusco/Views/Shared/_Layout.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Shared/_Layout.cshtml
@@ -22,15 +22,25 @@
         </button>
         <div class="collapse navbar-collapse navbar-margin" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/Home/Index">Inicio <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Pedidos/Index">Pedidos</a>
+                    <a class="nav-link" href="/Home/Index">Inicio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Pedidos/PedidosCliente">Mis Pedidos</a>
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Pedidos<span class="sr-only">(current)</span></a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/Pedidos/Index">Inicio</a>
+                        <a class="dropdown-item" href="/Pedidos/Create">Nuevo pedido</a>
+                        <a class="dropdown-item" href="/Pedidos/PedidosCliente">Mis pedidos</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/Pedidos/Pedidos">Encontrar pedidos cercanos</a>
+                    </div>
                 </li>
+                @if (User.IsInRole("Administrador"))
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Usuarios/Index">Administrar usuarios</a>
+                    </li>
+                }
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
