--- a/TeLoBusco/TeLoBusco/Views/Shared/_Layout.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewBag.Title - Wappo</title>
     @Scripts.Render("~/bundles/jquery")
     @Styles.Render("~/Content/css")
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light" rel="stylesheet">
+    @*<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light" rel="stylesheet">*@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
