--- a/TeLoBusco/TeLoBusco/Views/Pedidos/_PedidosClienteGrilla.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/_PedidosClienteGrilla.cshtml
@@ -3,63 +3,56 @@
 
 <head>
     @*<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.css" />
-
-        <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.js"></script>*@
-
-
-    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+      <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.js"></script>*@
+    @*<link href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet" />*@
 </head>
-<div class="card mb-3">
-    <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered" id="dataTable" width="100%" cellspacing="0">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Dirección Origen</th>
-                        <th>Dirección Destino</th>
-                        <th>Estado</th>
-                        <th>Precio pedido</th>
-                        <th>Precio transporte</th>
-                    </tr>
-                </thead>
-                <tfoot>
-                    <tr>
-                        <th></th>
-                        <th>Dirección Origen</th>
-                        <th>Dirección Destino</th>
-                        <th>Estado</th>
-                        <th>Precio pedido</th>
-                        <th>Precio transporte</th>
-                    </tr>
-                </tfoot>
-                <tbody>
-                    @foreach (var pedido in Model)
-                    {
-                        <tr>
-                            <td class="celdaBotones">
-                                <a href="@Url.Action("Edit", new { id = pedido.IdPedido })">Modificar</a>
-                                <a href="#" id=@pedido.IdPedido class="eliminarPedido">Eliminar</a>
-                            </td>
-                            <td>@pedido.calle_origen @pedido.nro_calle_origen , @pedido.Localidades.Nombre</td>
-                            <td>@pedido.calle_origen @pedido.nro_calle_origen ,@pedido.Localidades.Nombre</td>
-                            <td>@pedido.Estados_Pedidos.Descripcion</td>
-                            <td>@Math.Round(pedido.precio_predido, 2)</td>
-                            @if (pedido.precio_transporte != null)
-                            {
-                                <td>@Math.Round(Convert.ToDecimal(pedido.precio_transporte), 2)</td>
-                            }
-                            else
-                            {
-                                <td>No disponible</td>
-                            }
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
+
+<table id="dataTable" class="table table-striped table-bordered" style="width:100%">
+    <thead>
+        <tr>
+            <th></th>
+            <th>Dirección Origen</th>
+            <th>Dirección Destino</th>
+            <th>Estado</th>
+            <th>Precio pedido</th>
+            <th>Precio transporte</th>
+        </tr>
+    </thead>
+    <tfoot>
+        <tr>
+            <th></th>
+            <th>Dirección Origen</th>
+            <th>Dirección Destino</th>
+            <th>Estado</th>
+            <th>Precio pedido</th>
+            <th>Precio transporte</th>
+        </tr>
+    </tfoot>
+    <tbody>
+        @foreach (var pedido in Model)
+        {
+            <tr>
+                <td class="celdaBotones">
+                    <a href="@Url.Action("Edit", new { id = pedido.IdPedido })">Modificar</a>
+                    <a href="#" id=@pedido.IdPedido class="eliminarPedido">Eliminar</a>
+                </td>
+                <td>@pedido.calle_origen @pedido.nro_calle_origen , @pedido.Localidades.Nombre</td>
+                <td>@pedido.calle_origen @pedido.nro_calle_origen ,@pedido.Localidades.Nombre</td>
+                <td>@pedido.Estados_Pedidos.Descripcion</td>
+                <td>@Math.Round(pedido.precio_predido, 2)</td>
+                @if (pedido.precio_transporte != null)
+                {
+                    <td>@Math.Round(Convert.ToDecimal(pedido.precio_transporte), 2)</td>
+                }
+                else
+                {
+                    <td>No disponible</td>
+                }
+            </tr>
+        }
+    </tbody>
+</table>
+
 
 <script type="text/javascript">
     $(document).ready(function () {
