--- a/TeLoBusco/TeLoBusco/Views/Pedidos/Create.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/Create.cshtml
@@ -18,7 +18,7 @@
                 <div class="row">
 
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card" style="min-height: 371px;">
                             <div class="card-header">
                                 Datos del pedido
                             </div>
@@ -33,7 +33,7 @@
                                 <div class="form-group">
                                     @Html.LabelFor(m => m.Observaciones, new { @class = "col-md-12 control-label" })
                                     <div class="col-md-10">
-                                        @Html.TextAreaFor(m => m.Observaciones, new { @class = "form-control"})
+                                        @Html.TextAreaFor(m => m.Observaciones, new { @class = "form-control", @placeholder = "Contiene aceitunas negras"})
                                         @Html.ValidationMessageFor(m => m.Observaciones, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -50,7 +50,7 @@
 
                     <div class="col-md-4">
                         <!-- ORIGEN -->
-                        <div class="card">
+                        <div class="card" style="min-height: 371px;">
                             <div class="card-header">
                                 Dirección de origen
                             </div>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="col-md-4">
                         <!-- DESTINO -->
-                        <div class="card">
+                        <div class="card" style="min-height: 371px;">
                             <div class="card-header">
                                 Dirección de destino
                             </div>
@@ -115,12 +115,16 @@
                     </div>
                 </div>
 
-                
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Publicar pedido" class="btn btn-default" />
+                <br />
+                <!-- BOTÓN PUBLICAR PEDIDO -->
+                <div class="row">
+                    <div class="form-group" style="margin-left: auto; margin-right: auto;">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Publicar pedido" class="btn btn-default"/>
+                        </div>
                     </div>
                 </div>
+                
                 @*<p>
                 @Html.ActionLink("Registrar como nuevo usuario", "Register")
             </p>*@
