Actualización Modelo de datos
Se agregan las siguientes tablas:

* Actividades (mensajes, valoraciones, denuncias).
* Notificaciones.
* Postulaciones.
* TiposActividades
* Se reemplaza Estados_pendientes por Estados.

--- a/TeLoBusco/TeLoBusco/Views/Pedidos/_PedidosClienteGrilla.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/_PedidosClienteGrilla.cshtml
@@ -36,9 +36,9 @@
                     <a href="@Url.Action("Edit", new { id = pedido.IdPedido })">Modificar</a>
                     <a href="#" id=@pedido.IdPedido class="eliminarPedido">Eliminar</a>
                 </td>
-                <td>@pedido.calle_origen @pedido.nro_calle_origen , @pedido.Localidades.Nombre</td>
-                <td>@pedido.calle_origen @pedido.nro_calle_origen ,@pedido.Localidades.Nombre</td>
-                <td>@pedido.Estados_Pedidos.Descripcion</td>
+                <td>@pedido.calle_origen @pedido.nro_calle_origen, @pedido.Localidades.Nombre</td>
+                <td>@pedido.calle_destino @pedido.nro_calle_destino, @pedido.Localidades1.Nombre</td>
+                <td>@pedido.Estados.Descripcion</td>
                 <td>@Math.Round(pedido.precio_predido, 2)</td>
                 @if (pedido.precio_transporte != null)
                 {
