--- a/TeLoBusco/TeLoBusco/Views/Pedidos/_PedidosGrilla.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/_PedidosGrilla.cshtml
@@ -40,9 +40,9 @@
             </td>*@
                 <td><a href="#">Postularme</a></td>
                 <td>@pedido.AspNetUsers.NombreApellido</td>
-                <td>@pedido.calle_origen @pedido.nro_calle_origen , @pedido.Localidades.Nombre</td>
-                <td>@pedido.calle_origen @pedido.nro_calle_origen ,@pedido.Localidades.Nombre</td>
-                <td>@pedido.Estados_Pedidos.Descripcion</td>
+                <td>@pedido.calle_origen @pedido.nro_calle_origen, @pedido.Localidades.Nombre</td>
+                <td>@pedido.calle_destino @pedido.nro_calle_destino, @pedido.Localidades1.Nombre</td>
+                <td>@pedido.Estados.Descripcion</td>
                 <td>@Math.Round(pedido.precio_predido, 2)</td>
                 @if (pedido.precio_transporte != null)
                 {
