--- a/TeLoBusco/TeLoBusco/Content/Site.css
+++ b/TeLoBusco/TeLoBusco/Content/Site.css
@@ -41,7 +41,8 @@ textarea {
 }
 
 .logo {
-    border: 2px solid black;
+    /*border: 2px solid black;*/ /*Logo anterior - colres invertidos*/
+    border: 2px solid white;
     border-radius: 10px;
 }
 
