--- a/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
             <div class="content">
                 <hgroup>
                     <h1 class="tituloLanding">Wappo</h1>
-                    <h2 class="subtituloLanding">¿Necesitás un delivery?.</h2>
+                    <h2 class="subtituloLanding">¿Necesitás un delivery?</h2>
                 </hgroup>
             </div>
             <div class="overlay"></div>
