--- a/TeLoBusco/TeLoBusco/Views/Shared/_Layout.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom navbar-margin-bottom">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark navbar-custom navbar-margin-bottom">
         <a class="navbar-brand navbar-title" href="/Home/Index">
             <img src="~/Images/logo.png" class="logo" width="92" height="52" alt="Logo">
             Wappo
@@ -41,13 +41,14 @@
                         <a class="nav-link" href="/Usuarios/Index">Administrar usuarios</a>
                     </li>
                 }
+                
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
     </nav>
 
     <div class="container body-content">
-        <div class="bodyPages">
+        <div class="bodyPages" style="margin-top:95px;">
             @RenderBody()
         </div>         
         <hr/>
