--- a/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#000000" />
     <title>@ViewBag.Title - Wappo</title>
     @Styles.Render("~/Content/css")
     @*<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light" rel="stylesheet">*@
