Corrección error menor
* Corrección de error de tipeo en las políticas de precios.

--- a/TeLoBusco/TeLoBusco/Views/Pedidos/Postularse.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/Postularse.cshtml
@@ -74,7 +74,7 @@
                                                             <div class="card border-primary mb-3" style="max-width: 18rem;">
                                                                 <div class="card-header"><h5 class="text-primary">Precio tipo 2</h5></div>
                                                                 <div class="card-body text-primary">
-                                                                    <h5 class="card-title">Primary card title</h5>
+                                                                    <h5 class="card-title">Detalle del precio</h5>
                                                                     <p class="card-text">Distancias entre <b>10 Km y 20 Km</b>. El precio puede ir desde los <b>$50</b> a los <b>$100</b>.</p>
                                                                 </div>
                                                             </div>
