--- a/TeLoBusco/TeLoBusco/Views/Pedidos/Create.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/Create.cshtml
@@ -17,7 +17,7 @@
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="row">
 
-                    <div class="col-md-4">
+                    <div class="col-md-4" style="margin:5px 0px;">
                         <div class="card" style="min-height: 371px;">
                             <div class="card-header">
                                 Datos del pedido
@@ -48,7 +48,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-4" style="margin:5px 0px;">
                         <!-- ORIGEN -->
                         <div class="card" style="min-height: 371px;">
                             <div class="card-header">
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4" style="margin:5px 0px;">
                         <!-- DESTINO -->
                         <div class="card" style="min-height: 371px;">
                             <div class="card-header">
