--- a/TeLoBusco/TeLoBusco/Views/Pedidos/Postularse.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/Postularse.cshtml
@@ -17,7 +17,7 @@
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="row">
 
-                    <div class="col-md-8">
+                    <div class="col-md-8" style="margin:5px 0px;">
                         <div class="card" style="min-height: 433px;">
                             <div class="card-header">
                                 <h5>Postulación</h5>
@@ -57,10 +57,10 @@
                                         </h6>
                                         <div class="collapse" id="preciosDetalle">
                                             <div class="card-body">
-                                                <div class="col-12">
+                                                <div class="col-md-12">
                                                     <div class="row">
                                                         <!-- PRECIO TIPO 1 -->
-                                                        <div class="col-6">
+                                                        <div class="col-md-6">
                                                             <div class="card border-success mb-3" style="max-width: 18rem;">
                                                                 <div class="card-header"><h5 class="text-success">Precio tipo 1</h5></div>
                                                                 <div class="card-body text-success">
@@ -70,7 +70,7 @@
                                                             </div>
                                                         </div>
                                                         <!-- PRECIO TIPO 2 -->
-                                                        <div class="col-6">
+                                                        <div class="col-md-6">
                                                             <div class="card border-primary mb-3" style="max-width: 18rem;">
                                                                 <div class="card-header"><h5 class="text-primary">Precio tipo 2</h5></div>
                                                                 <div class="card-body text-primary">
@@ -82,7 +82,7 @@
                                                     </div>
                                                     <div class="row">
                                                         <!-- PRECIO TIPO 3 -->
-                                                        <div class="col-6">
+                                                        <div class="col-md-6">
                                                             <div class="card border-info mb-3" style="max-width: 18rem;">
                                                                 <div class="card-header"><h5 class="text-info">Precio tipo 3</h5></div>
                                                                 <div class="card-body text-info">
@@ -92,7 +92,7 @@
                                                             </div>
                                                         </div>
                                                         <!-- PRECIO TIPO 4 -->
-                                                        <div class="col-6">
+                                                        <div class="col-md-6">
                                                             <div class="card border-warning mb-3" style="max-width: 18rem;">
                                                                 <div class="card-header"><h5 class="text-warning">Precio tipo 4</h5></div>
                                                                 <div class="card-body text-warning">
@@ -124,7 +124,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-4" style="margin:5px 0px;">
                         <!-- DATOS DEL PEDIDO -->
                         <div class="card" style="min-height: 433px;">
                             <div class="card-header">
