Corrección  de errores en la obtención de pedidos

--- a/TeLoBusco/TeLoBusco/Views/Pedidos/Index.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/Index.cshtml
@@ -6,7 +6,7 @@
 
 <!--OPCIONES-->
 <div class="row">
-    <div class="col-sm-6">
+    <div class="col-sm-6" style="margin:5px 0px;">
         <div class="card text-center">
             <div class="card-body">
                 <h5 class="subtituloPagina">¡Quiero ser delivery!</h5>
@@ -15,7 +15,7 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-6" style="margin:5px 0px;">
         <div class="card text-center">
             <div class="card-body">
                 <h5 class="subtituloPagina">¡Necesito un delivery!</h5>
