--- a/TeLoBusco/TeLoBusco/Views/Shared/_Layout.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                         <a class="dropdown-item" href="/Pedidos/PedidosCliente">Mis pedidos</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/Pedidos/Pedidos">Encontrar pedidos cercanos</a>
+                        <a class="dropdown-item" href="/Pedidos/PedidosTodos">Todos los pedidos</a>
                     </div>
                 </li>
                 @if (User.IsInRole("Administrador"))
